[gd_scene load_steps=37 format=2]

[ext_resource path="res://scenes/Cat.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/MainLevel.gd" type="Script" id=2]
[ext_resource path="res://scripts/KitchenCounter.gd" type="Script" id=3]
[ext_resource path="res://items/candy.tres" type="Resource" id=4]
[ext_resource path="res://scenes/Cookie.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Cabinet.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Box.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GlassVial.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/PotionBook.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/FlowerBook.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Mort.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Embers.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Water.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/nikitax27s-waltz-166896.mp3" type="AudioStream" id=14]
[ext_resource path="res://scenes/Ash.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Sugar.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/Cauldron.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Mel.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/Distiller.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Lily.tscn" type="PackedScene" id=20]
[ext_resource path="res://scripts/CameraBound.gd" type="Script" id=21]
[ext_resource path="res://assets/Milk.png" type="Texture" id=22]
[ext_resource path="res://assets/ItemToggles/MortSprite.png" type="Texture" id=23]
[ext_resource path="res://assets/ItemToggles/LilySprite.png" type="Texture" id=24]
[ext_resource path="res://assets/ItemToggles/EmbersSprite.png" type="Texture" id=25]
[ext_resource path="res://assets/melidle/Melidle2.png" type="Texture" id=26]
[ext_resource path="res://assets/melidle/Melidle3.png" type="Texture" id=27]
[ext_resource path="res://assets/melidle/Melidle1.png" type="Texture" id=28]
[ext_resource path="res://assets/CG pixel 4x5.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://assets/Background.png" type="Texture" id=30]
[ext_resource path="res://assets/Foregorund.png" type="Texture" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.125, 33.75 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 305.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 216.063, 15.75 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="MainLevel" type="Node2D"]
script = ExtResource( 2 )

[node name="Cat" parent="." instance=ExtResource( 1 )]
position = Vector2( -874, 2 )
z_index = -1
inv = [ ExtResource( 4 ), null, null, null, null, null, null, null, null, null, null, null ]

[node name="Cauldron" parent="." instance=ExtResource( 17 )]
position = Vector2( 1572, 249 )
z_index = -2

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 20.0
text = "[TAB] Show Inventory"

[node name="KitchenCounter" type="Area2D" parent="."]
z_index = -2

[node name="InteractArea" type="CollisionShape2D" parent="KitchenCounter"]
position = Vector2( -1005, 342 )
shape = SubResource( 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="KitchenCounter/InteractArea"]
visible = false
margin_left = -106.0
margin_top = -178.0
margin_right = 15.0
margin_bottom = -162.0
custom_fonts/font = SubResource( 5 )
text = "[E] Kitchen Counter"

[node name="Cookie" parent="." instance=ExtResource( 5 )]
position = Vector2( -210, 332 )
z_index = -2

[node name="Cabinet" parent="." instance=ExtResource( 6 )]
position = Vector2( 209, 346 )
z_index = -2

[node name="Box" parent="." instance=ExtResource( 7 )]
position = Vector2( 798, 334 )
z_index = -2

[node name="GlassVial" parent="." instance=ExtResource( 8 )]
position = Vector2( 1786, 292 )
z_index = -2

[node name="PotionBook" parent="." instance=ExtResource( 9 )]
position = Vector2( 622, 340 )
z_index = -2

[node name="FlowerBook" parent="." instance=ExtResource( 10 )]
position = Vector2( 421, 270 )
z_index = -2

[node name="Water" parent="." instance=ExtResource( 13 )]
position = Vector2( -1173, 368 )
z_index = -2

[node name="Embers" parent="." instance=ExtResource( 12 )]
position = Vector2( 1192, 287 )
z_index = -2

[node name="Mort" parent="." instance=ExtResource( 11 )]
position = Vector2( 1381, 277 )
z_index = -2

[node name="Ash" parent="." instance=ExtResource( 15 )]
position = Vector2( -1411, 288 )
z_index = -2

[node name="Sugar" parent="." instance=ExtResource( 16 )]
position = Vector2( -770, 303 )
z_index = -2

[node name="Mel" parent="." instance=ExtResource( 18 )]
position = Vector2( 34, 262 )
z_index = -2

[node name="Distiller" parent="." instance=ExtResource( 19 )]
position = Vector2( 1028, 257 )
z_index = -2

[node name="Lily" parent="." instance=ExtResource( 20 )]
position = Vector2( -1939, 286 )
z_index = -2

[node name="BG" type="Sprite" parent="."]
position = Vector2( -102, 306 )
scale = Vector2( 6.3, 6.3 )
z_index = -5
texture = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Boundary2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary2"]
position = Vector2( -2113, 305 )
shape = SubResource( 2 )

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 1916, 299 )
shape = SubResource( 2 )

[node name="CameraBound" type="Area2D" parent="."]
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBound"]
position = Vector2( -1876.06, 401 )
shape = SubResource( 3 )

[node name="CameraBound2" type="Area2D" parent="."]
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBound2"]
position = Vector2( 1640, 403 )
shape = SubResource( 3 )

[node name="MilkSprite" type="Sprite" parent="."]
position = Vector2( -1004, 355 )
scale = Vector2( 4, 4 )
z_index = -4
texture = ExtResource( 22 )

[node name="LilySprite" type="Sprite" parent="."]
position = Vector2( -1941, 476 )
scale = Vector2( 6.3, 6.3 )
z_index = -4
texture = ExtResource( 24 )

[node name="EmberSprite" type="Sprite" parent="."]
position = Vector2( 1224, 339 )
scale = Vector2( 6.3, 6.3 )
z_index = -4
texture = ExtResource( 25 )

[node name="MortSprite" type="Sprite" parent="."]
position = Vector2( 1411, 326 )
scale = Vector2( 6.3, 6.3 )
z_index = -4
texture = ExtResource( 23 )

[node name="Mel2" type="AnimatedSprite" parent="."]
position = Vector2( 56, 399 )
scale = Vector2( 6.2, 6.2 )
z_index = -4
frames = SubResource( 4 )
frame = 3
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -106, -51 )
stream = ExtResource( 14 )
volume_db = -0.921
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1980, 503 )
scale = Vector2( 6.2, 6.2 )
texture = ExtResource( 31 )

[connection signal="body_entered" from="KitchenCounter" to="KitchenCounter/InteractArea" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KitchenCounter" to="KitchenCounter/InteractArea" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="CameraBound" to="CameraBound" method="_on_CameraBound_body_entered"]
[connection signal="body_exited" from="CameraBound" to="CameraBound" method="_on_CameraBound_body_exited"]
[connection signal="body_entered" from="CameraBound2" to="CameraBound2" method="_on_CameraBound_body_entered"]
[connection signal="body_exited" from="CameraBound2" to="CameraBound2" method="_on_CameraBound_body_exited"]
